--- a/templates/add_lesson.html
+++ b/templates/add_lesson.html
@@ -88,6 +88,14 @@
                         <!-- Options will be dynamically populated -->
                     </select>
                 </div>
+                <!-- Price Adjustment Dropdown -->
+                <div class="form-group">
+                    <label for="price_adjustment">Price Adjustment</label>
+                    <select class="form-control" id="price_adjustment" name="price_adjustment_id">
+                        <option value="">Select a Price Adjustment</option>
+                        <!-- Options will be dynamically populated -->
+                    </select>
+                </div>
 
                 <!-- Submit Button -->
                 <button type="submit" class="btn btn-primary">Add Lesson</button>
